--- a/railties/lib/rails/generators/rails/app/templates/config/environments/production.rb.tt
+++ b/railties/lib/rails/generators/rails/app/templates/config/environments/production.rb.tt
@@ -55,8 +55,7 @@
   # config.assets.precompile += %w( search.js )
   <%- end -%>
 
-  # Ignore bad email addresses and do not raise email delivery errors.
-  # If set to true, delivery errors will be raised if the external email server is configured properly.
+  # Disable delivery errors, bad email addresses will be ignored.
   # config.action_mailer.raise_delivery_errors = false
 
   # Enable threaded mode.
